fixed scrollbars

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ html,body{
 }
 
 #hero{
-
+    padding-top: 50px;
     position: absolute;
     width: 100%;
     height: 75%;
@@ -81,7 +81,7 @@ html,body{
 }
 
 #heroleft{
-    min-width: 50%;
+    min-width: 70%;
     position: relative;
 }
 
@@ -106,7 +106,7 @@ html,body{
     position: absolute;
     line-height: 0.9;
     font-family: "kajiro";
-    font-size: 11vw;
+    font-size: 7.5vw;
     font-weight: 100;
     color: #ffffff;
     -webkit-text-stroke-color: rgb(183, 183, 183);
@@ -117,9 +117,9 @@ html,body{
 
 
 #heroleft button{
-    padding: 0.8vw 3vw;
+    padding: 0.4vw 2vw;
     font-family: 'kajiro';
-    font-size: 3.5vw;
+    font-size: 3vw;
     margin-top: 2vw;
     font-weight: 300;
     pointer-events: all;
